--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "@types/node": "^11.13.8",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.0.8",
     "@types/react-router-dom": "^4.3.3",
     "@types/reactstrap": "^8.0.1",
+    "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
     "eslint": "^5.16.0",
