--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-social": "^5.1.1",
     "classnames": "^2.2.6",
+    "cross-fetch": "^3.0.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
