--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux-form": "^1.16.13",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "react-transition-group": "^4.2.2",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
@@ -54,6 +55,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.0.8",
     "@types/react-router-dom": "^4.3.3",
+    "@types/react-transition-group": "^4.2.2",
     "@types/reactstrap": "^8.0.1",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.7",
