--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^16.8.6",
     "react-popper": "^1.3.3",
     "react-redux": "^7.0.3",
